--- a/secaosunnycheeks.html
+++ b/secaosunnycheeks.html
@@ -174,8 +174,7 @@ function imageZoom(imgID, resultID) {
      <div class="bar2"></div>
   </div>
     <div>
-    <p class="info-do-texto">O Delineador Líquido Preto da Ruby Rose tem a ponta fininha que é perfeito para criar traços finos e delicados ou grossos, como você preferir! Ele é bem pigmentado, seca rápido e é resistente a água e o melhor é que esse produto é cruelty free.
-        Ele é ideal para você que ama dar destaque aos olhos e fazer aquele olho gatinho que sempre sonhou.</p></div>
+    <p class="info-do-texto">O Blush Sunny Cheeks Mari Maria Makeup possui acabamento matte e cintilante. Maçãs do rosto coradas e vibrantes dão vida à maquiagem e deixam toque saudável e charmoso. Fórmula suave e fácil de espalhar, possui alta pigmentação e cores fantásticas. Adere suavemente à pele, proporcionando um acabamento natural que dura o dia todo.</p></div>
       <div>
         <p class="preço">R$39,90</p>
       </div>
